--- a/app/composer.json
+++ b/app/composer.json
@@ -21,7 +21,10 @@
 
     "require": {
         "php": ">=7.0",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "symfony/dependency-injection": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/config": "^3.3"
     },
 
     "require-dev": {
